assets/css/style.css
* {
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
}

body {
    font-family: Poppins, Helvetica, sans-serif;
    animation-name: appear;
    animation-duration: 1s;
}

nav {
    margin-top: 48px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.fab {
    font-size: 24px;
}
.container {
    /* max-width: 1159px; */
    width: 80%;
    height: 100vh;
    margin: auto;
}

/* General classes */
.text-white{
    color: #fff !important;
}
.white {
    background-color: #fff !important;
}
.appear {
    display: flex !important;
    transform: translateX(0%) !important;
}

/* Keyframes */
@keyframes appear {
    0% {
        margin-left: 100%;
    }

    100% {
        margin-left: 0%;
    }
}

/* The background on hamburger menu */
.voile {
    display: none;
    background-color: rgba(36, 42, 69, 100);
    height: 101vh;
    width: 101vw;
    position: absolute;
    top: 0;
    z-index: -10000;
    animation-name: appear;
    animation-duration: 1s;
    overflow: hidden;
}

/* The logo */
.logo {
    display: flex;
    justify-content: center;
    align-items: center;
}
.logo-icon {
    background-color: #5267DF;
    height: 25px;
    width: 25px;
    border-radius: 50%;
    margin-right: 1rem;
    position: relative;
}
.logo-icon::before {
    content: "";
    position: absolute;
    top: 7px;
    left: calc(50% - 3.5px);
    width: 7px;
    height: 12px;
    background-color: #fff;
    border-radius: 2px 2px 0 0;
}
.logo-icon::after {
    content: "";
    position: absolute;
    top: 15px;
    left: calc(50% - 3.5px);
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 3.5px 4px 3.5px;
    border-color: transparent transparent #5267DF transparent;
}
.logo-icon-opened {
    background-color: #fff;
}
.logo-icon-opened::before {
    background-color: rgba(36, 42, 69, 100);
}
.logo-icon-opened::after {
    border-color: transparent transparent #fff transparent;
}
.logo-text {
    color: #242A45;
    transition: all .5s ease-in-out;
}

/* The navigation */
.nav-links {
    display: flex;
    text-transform: uppercase;
    text-decoration: none;
    list-style: none;
    justify-content: space-between;
    animation-name: appear;
    animation-duration: 1s;
}
.nav-links li {
    margin-left: 2rem;
}
.nav-links li a {
    font-family: Rubik, Helvetica, sans-serif;
    color: #242A45;
    letter-spacing: 1.5px;
    font-size: 13px;
}
.nav-links li:last-child a {
    background: #FA5959;
    padding: 12px 32px 12px 32px;
    border-radius: 5px;
    box-shadow: 0 8px 8px -4px rgba(73, 93, 87, .2);
    color: #fff;
}
.separator {
    display: none;
    height: 1px;
    background-color: #fff;
    opacity: .1;
}

.fa-facebook-square {
    margin-right: 40px;
}

/*The hamburger menu*/
.hamburger {
    display: none;
    height: 15px;
    cursor: pointer;
}
.hamburger .line {
    height: 3px;
    background-color: #242A45;
    width: 18px;
    transition: all .5s ease-in-out;
}
.line1.cross {
    transform : rotate(45deg) translate(5px, 5px);
}

.line2.cross {
    transform: translateX(100%);
    opacity: 0;
}

.line3.cross {
    transform : rotate(-45deg) translate(4px, -3px);
}
/* Responsiveness */
@media screen and (max-width: 664px) {
    body {
        overflow: hidden;
    }

    .separator {
        display: block;
    }
    .hamburger {
        display: flex;
        flex-direction: column;
        justify-content: inherit;
    }
    
    .container {
        max-width: 80%;
    }

    nav {
        margin-top: 40px;
    }

    .nav-links-container {
        display: none;
        justify-content: space-between;
        position: absolute;
        color: #fff;
        flex-direction: column;
        width: 80%;
        position: absolute;
        top: calc(5vh + 60px);
        text-align: center;
        height: 80%;
    }
    .nav-links-list {
        height: 40%;
    }
    .nav-links {
        display: flex;
        color: #fff;
        flex-direction: column;
        text-align: center;
        height: 100%;
        transform: translateX(150%);
        transition: transform 1s linear;
    }

    .nav-links li {
       margin-left: 0;
    }

    .nav-links li a {
        font-size: 20px;
        color: #fff;
    }

    .nav-links li:last-child {
        border: 1px solid #fff;
        border-radius: 5px;
        padding: 5px;
    }
    .nav-links li:last-child a {
        background: none;
        padding: none;
        border-radius: 5px;
        box-shadow: none;
        color: #fff;
    }
}

